--- a/new.ipynb
+++ b/new.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "83ce811f",
    "metadata": {},
    "outputs": [
@@ -10,14 +10,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6\n"
+      "[[2. 4. 1. 6. 4.]\n",
+      " [3. 1. 8. 5. 3.]\n",
+      " [5. 8. 5. 9. 1.]\n",
+      " [9. 7. 6. 5. 4.]]\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
-    "a = np.array([[2,3,4],[5,6,7]])\n",
-    "print(a.size)"
+    "a = np.array([[2,4,1,6,4],[3,1,8,5,3],[5,8,5,9,1],[9,7,6,5,4]])\n",
+    "a = a.astype('float')\n",
+    "print(a)"
    ]
   }
  ],
