--- a/new.ipynb
+++ b/new.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "83ce811f",
    "metadata": {},
    "outputs": [
@@ -22,6 +22,16 @@
     "a = np.array([[2,4,1,6,4],[3,1,8,5,3],[5,8,5,9,1],[9,7,6,5,4]])\n",
     "a = a.astype('float')\n",
     "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "a931a120",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
    ]
   }
  ],
