--- a/new.ipynb
+++ b/new.ipynb
@@ -830,280 +830,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "1d53fc9c",
+   "execution_count": 50,
+   "id": "0f8a5077",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Type 1</th>\n",
-       "      <th>Type 2</th>\n",
-       "      <th>HP</th>\n",
-       "      <th>Attack</th>\n",
-       "      <th>Defense</th>\n",
-       "      <th>Sp. Atk</th>\n",
-       "      <th>Sp. Def</th>\n",
-       "      <th>Speed</th>\n",
-       "      <th>Generation</th>\n",
-       "      <th>Legendary</th>\n",
-       "      <th>Pure legendary</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>#</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Bulbasaur</td>\n",
-       "      <td>Grass</td>\n",
-       "      <td>Poison</td>\n",
-       "      <td>45</td>\n",
-       "      <td>49</td>\n",
-       "      <td>49</td>\n",
-       "      <td>65</td>\n",
-       "      <td>65</td>\n",
-       "      <td>45</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Ivysaur</td>\n",
-       "      <td>Grass</td>\n",
-       "      <td>Poison</td>\n",
-       "      <td>60</td>\n",
-       "      <td>62</td>\n",
-       "      <td>63</td>\n",
-       "      <td>80</td>\n",
-       "      <td>80</td>\n",
-       "      <td>60</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Venusaur</td>\n",
-       "      <td>Grass</td>\n",
-       "      <td>Poison</td>\n",
-       "      <td>80</td>\n",
-       "      <td>82</td>\n",
-       "      <td>83</td>\n",
-       "      <td>100</td>\n",
-       "      <td>100</td>\n",
-       "      <td>80</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>VenusaurMega Venusaur</td>\n",
-       "      <td>Grass</td>\n",
-       "      <td>Poison</td>\n",
-       "      <td>80</td>\n",
-       "      <td>100</td>\n",
-       "      <td>123</td>\n",
-       "      <td>122</td>\n",
-       "      <td>120</td>\n",
-       "      <td>80</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Charmander</td>\n",
-       "      <td>Fire</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>39</td>\n",
-       "      <td>52</td>\n",
-       "      <td>43</td>\n",
-       "      <td>60</td>\n",
-       "      <td>50</td>\n",
-       "      <td>65</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>719</th>\n",
-       "      <td>Diancie</td>\n",
-       "      <td>Rock</td>\n",
-       "      <td>Fairy</td>\n",
-       "      <td>50</td>\n",
-       "      <td>100</td>\n",
-       "      <td>150</td>\n",
-       "      <td>100</td>\n",
-       "      <td>150</td>\n",
-       "      <td>50</td>\n",
-       "      <td>6</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>719</th>\n",
-       "      <td>DiancieMega Diancie</td>\n",
-       "      <td>Rock</td>\n",
-       "      <td>Fairy</td>\n",
-       "      <td>50</td>\n",
-       "      <td>160</td>\n",
-       "      <td>110</td>\n",
-       "      <td>160</td>\n",
-       "      <td>110</td>\n",
-       "      <td>110</td>\n",
-       "      <td>6</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>720</th>\n",
-       "      <td>HoopaHoopa Confined</td>\n",
-       "      <td>Psychic</td>\n",
-       "      <td>Ghost</td>\n",
-       "      <td>80</td>\n",
-       "      <td>110</td>\n",
-       "      <td>60</td>\n",
-       "      <td>150</td>\n",
-       "      <td>130</td>\n",
-       "      <td>70</td>\n",
-       "      <td>6</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>720</th>\n",
-       "      <td>HoopaHoopa Unbound</td>\n",
-       "      <td>Psychic</td>\n",
-       "      <td>Dark</td>\n",
-       "      <td>80</td>\n",
-       "      <td>160</td>\n",
-       "      <td>60</td>\n",
-       "      <td>170</td>\n",
-       "      <td>130</td>\n",
-       "      <td>80</td>\n",
-       "      <td>6</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>721</th>\n",
-       "      <td>Volcanion</td>\n",
-       "      <td>Fire</td>\n",
-       "      <td>Water</td>\n",
-       "      <td>80</td>\n",
-       "      <td>110</td>\n",
-       "      <td>120</td>\n",
-       "      <td>130</td>\n",
-       "      <td>90</td>\n",
-       "      <td>70</td>\n",
-       "      <td>6</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>800 rows × 12 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                      Name   Type 1  Type 2  HP  Attack  Defense  Sp. Atk  \\\n",
-       "#                                                                           \n",
-       "1                Bulbasaur    Grass  Poison  45      49       49       65   \n",
-       "2                  Ivysaur    Grass  Poison  60      62       63       80   \n",
-       "3                 Venusaur    Grass  Poison  80      82       83      100   \n",
-       "3    VenusaurMega Venusaur    Grass  Poison  80     100      123      122   \n",
-       "4               Charmander     Fire     NaN  39      52       43       60   \n",
-       "..                     ...      ...     ...  ..     ...      ...      ...   \n",
-       "719                Diancie     Rock   Fairy  50     100      150      100   \n",
-       "719    DiancieMega Diancie     Rock   Fairy  50     160      110      160   \n",
-       "720    HoopaHoopa Confined  Psychic   Ghost  80     110       60      150   \n",
-       "720     HoopaHoopa Unbound  Psychic    Dark  80     160       60      170   \n",
-       "721              Volcanion     Fire   Water  80     110      120      130   \n",
-       "\n",
-       "     Sp. Def  Speed  Generation  Legendary  Pure legendary  \n",
-       "#                                                           \n",
-       "1         65     45           1      False           False  \n",
-       "2         80     60           1      False           False  \n",
-       "3        100     80           1      False           False  \n",
-       "3        120     80           1      False           False  \n",
-       "4         50     65           1      False           False  \n",
-       "..       ...    ...         ...        ...             ...  \n",
-       "719      150     50           6       True           False  \n",
-       "719      110    110           6       True           False  \n",
-       "720      130     70           6       True           False  \n",
-       "720      130     80           6       True           False  \n",
-       "721       90     70           6       True           False  \n",
-       "\n",
-       "[800 rows x 12 columns]"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pokemon['Pure legendary'] = False\n",
     "pokemon.loc[(pokemon['Legendary'] == True)&(pokemon['Generation'] == 1),'Pure legendary'] = True\n",
-    "pd.to_csv(pokemon)"
+    "pokemon.to_csv('updated_pokedex.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "a71883dc",
+   "execution_count": 55,
+   "id": "ebe1b219",
    "metadata": {},
    "outputs": [
     {
@@ -1124,26 +866,37 @@
       "720     HoopaHoopa Unbound  Psychic    Dark  80     160       60      170   \n",
       "721              Volcanion     Fire   Water  80     110      120      130   \n",
       "\n",
-      "     Sp. Def  Speed  Generation  Legendary  \n",
-      "#                                           \n",
-      "1         65     45           1      False  \n",
-      "2         80     60           1      False  \n",
-      "3        100     80           1      False  \n",
-      "3        120     80           1      False  \n",
-      "4         50     65           1      False  \n",
-      "..       ...    ...         ...        ...  \n",
-      "719      150     50           6       True  \n",
-      "719      110    110           6       True  \n",
-      "720      130     70           6       True  \n",
-      "720      130     80           6       True  \n",
-      "721       90     70           6       True  \n",
+      "     Sp. Def  Speed  Generation  Legendary  Pure legendary  \n",
+      "#                                                           \n",
+      "1         65     45           1      False           False  \n",
+      "2         80     60           1      False           False  \n",
+      "3        100     80           1      False           False  \n",
+      "3        120     80           1      False           False  \n",
+      "4         50     65           1      False           False  \n",
+      "..       ...    ...         ...        ...             ...  \n",
+      "719      150     50           6       True           False  \n",
+      "719      110    110           6       True           False  \n",
+      "720      130     70           6       True           False  \n",
+      "720      130     80           6       True           False  \n",
+      "721       90     70           6       True           False  \n",
       "\n",
-      "[800 rows x 11 columns]\n"
+      "[800 rows x 12 columns]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Ivysaur'"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(pokemon)"
+    "print(pokemon)\n",
+    "pokemon.iloc[1,0]"
    ]
   }
  ],
